@@ -1,6 +1,8 @@
 Change log for Mail::AuthenticationResults
 
 {{$NEXT}}
+  - Add parser method to parse json serialized object back
+    into the object(s) it represents
 
 2.20210915 2021-09-15 11:10:20+00:00 UTC
   - Fix for older versions of Perl
